# shannon

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  run.md  test-runner.sh  test-sdk-local.mjs  test-sdk.mjs
.claude/: settings.local.json
apps/cli/src/: docker.ts  index.ts
apps/worker/: test-sdk.mjs
apps/worker/configs/: config-schema.json  cve-2024-2624.yaml  example-config.yaml
docs/: agents.md  api-reference.md  architecture.md  configuration.md  entry-point-gap-analysis.md  entry-sink-gap-analysis.md  getting-started.md  prompt-engineering.md  route-analysis-binding-gap-analysis.md  shannon-defects.md  shannon-missed-vulnerabilities-fix-spec.md  shannon-xss-authz-missed-vulnerabilities-report.md  sink-gap-analysis-v2.md  whitebox-analysis-internals.md  whitebox-blackbox-handoff.md  whitebox-blackbox-scan.md  whitebox-refactoring-assessment.md
docs/refactor-docs/: 2026-05-29-shannon-py-gap-analysis.md
prompts/: audit-tier1.txt  auth-exploit.txt  authz-exploit.txt  injection-exploit.txt  misconfig-exploit.txt  pre-recon-code.txt  recon-blackbox.txt  recon-static.txt  recon.txt  report-executive.txt  ssrf-exploit.txt  validate-authentication.txt  vuln-auth.txt  vuln-authz.txt  vuln-injection.txt  vuln-misconfig.txt  vuln-ssrf.txt  vuln-xss.txt  xss-exploit.txt
prompts/pipeline-testing/: exploit-auth.txt  exploit-authz.txt  exploit-injection.txt  exploit-ssrf.txt  exploit-xss.txt  pre-recon-code.txt  vuln-auth.txt  vuln-authz.txt  vuln-injection.txt  vuln-ssrf.txt  vuln-xss.txt
prompts/shared/: _exploit-methodology.txt  _shared-session.txt  _static-dataflow-hints.txt  _vuln-scope.txt
scripts/: bootstrap.sh  fetch_models.py  models.json  private_models.json  smoke-test-sdk.ts  test-curl.txt  test-sdk-connectivity.ts
tests/integration/: test_whitebox_blackbox_handoff.py
(+265 files in other folders)
