[project]
name = "shannon-py"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.sources]
shannon-core = { path = "packages/core" }
shannon-whitebox = { path = "packages/whitebox" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
