[project]
name = "shannon-py"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "shannon-whitebox",
    "shannon-blackbox",
    "shannon-combined",
]

[tool.uv.sources]
shannon-core = { workspace = true }
shannon-whitebox = { workspace = true }
shannon-blackbox = { workspace = true }
shannon-combined = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"
# Use importlib mode to avoid module name conflicts between packages with
# identically-named test files (e.g. whitebox/test_cli.py vs blackbox/test_cli.py)
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "boto3>=1.43.17",
    "botocore>=1.43.17",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
